Trial of "CustomTab" and "Browser" Authentication.