@@ -1,6 +1,6 @@
 package com.musicslayer.cryptobuddy.util;
 
-import java.net.URL;
+import java.net.URI;
 import java.net.URLDecoder;
 import java.util.HashMap;
 
@@ -9,7 +9,7 @@ public class URLUtil {
         // Returns a HashMap of all of the parameter names and values.
         try {
             HashMap<String, String> parameters = new HashMap<>();
-            String query = new URL(url).getQuery();
+            String query = new URI(url).getQuery();
             String[] pairs = query.split("&");
             for (String pair : pairs) {
                 int idx = pair.indexOf("=");
